--- a/TypingGame/TypingGameUI/TypingGameUI.csproj
+++ b/TypingGame/TypingGameUI/TypingGameUI.csproj
@@ -55,6 +55,8 @@
       <Generator>MSBuild:Compile</Generator>
       <SubType>Designer</SubType>
     </ApplicationDefinition>
+    <Compile Include="LineChangedEventArgs.cs" />
+    <Compile Include="LineDisplayInfo.cs" />
     <Compile Include="TextManager.cs" />
     <Page Include="MainWindow.xaml">
       <Generator>MSBuild:Compile</Generator>
